fix noti + update Submission Specification API